Setup basic TableView in the Settings

--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -250,22 +250,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="anr-m3-a3w">
-                                <rect key="frame" x="0.0" y="40" width="375" height="578"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f3-r0-ZXI">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="425"/>
-                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                        <subviews>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h">
+                                                <rect key="frame" x="10" y="20" width="355" height="178"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="eWP-oY-MpG">
+                                                        <rect key="frame" x="0.0" y="28" width="355" height="44"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eWP-oY-MpG" id="wLe-jD-6ai">
+                                                            <rect key="frame" x="0.0" y="0.0" width="322" height="43"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.12811710858585856" green="0.12811710858585856" blue="0.12811710858585856" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="425" id="109-bf-6o9"/>
+                                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="3f3-r0-ZXI" secondAttribute="top" constant="20" id="cSS-CJ-FCt"/>
+                                            <constraint firstItem="jLY-zk-90h" firstAttribute="leading" secondItem="3f3-r0-ZXI" secondAttribute="leading" constant="10" id="eWS-Ya-4wM"/>
+                                            <constraint firstAttribute="trailing" secondItem="jLY-zk-90h" secondAttribute="trailing" constant="10" id="la4-Va-GCS"/>
+                                            <constraint firstAttribute="bottom" secondItem="jLY-zk-90h" secondAttribute="bottom" constant="400" id="uYM-zZ-KYz"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="height" secondItem="anr-m3-a3w" secondAttribute="height" id="3cf-nj-XK0"/>
+                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="width" secondItem="anr-m3-a3w" secondAttribute="width" id="7Sq-xa-Wwa"/>
                                     <constraint firstAttribute="trailing" secondItem="3f3-r0-ZXI" secondAttribute="trailing" id="Jx5-pG-OxN"/>
                                     <constraint firstItem="3f3-r0-ZXI" firstAttribute="top" secondItem="anr-m3-a3w" secondAttribute="top" id="bT8-qm-r6U"/>
                                     <constraint firstAttribute="bottom" secondItem="3f3-r0-ZXI" secondAttribute="bottom" id="fQd-5k-9NY"/>
                                     <constraint firstItem="3f3-r0-ZXI" firstAttribute="leading" secondItem="anr-m3-a3w" secondAttribute="leading" id="qs7-Ns-DX8"/>
-                                    <constraint firstAttribute="centerX" secondItem="3f3-r0-ZXI" secondAttribute="centerX" id="y65-Im-fHs"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -273,7 +293,7 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="anr-m3-a3w" secondAttribute="trailing" id="1XS-yQ-Lv5"/>
                             <constraint firstItem="anr-m3-a3w" firstAttribute="leading" secondItem="O9h-Pa-pET" secondAttribute="leading" id="LS8-qK-bhB"/>
-                            <constraint firstItem="anr-m3-a3w" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" constant="20" id="rrp-Eu-5Dj"/>
+                            <constraint firstItem="anr-m3-a3w" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="rrp-Eu-5Dj"/>
                             <constraint firstItem="dCk-HZ-5fS" firstAttribute="top" secondItem="anr-m3-a3w" secondAttribute="bottom" id="z9f-XS-M5l"/>
                         </constraints>
                     </view>
