--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -193,7 +193,7 @@
         <!--Stats-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="StatsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="TRStatsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L7p-HK-0SC"/>
                         <viewControllerLayoutGuide type="bottom" id="Djb-ko-YwX"/>
@@ -240,7 +240,7 @@
         <!--Settings-->
         <scene sceneID="8TM-5Y-d0u">
             <objects>
-                <viewController id="jNl-ID-ZvX" customClass="SettingsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="jNl-ID-ZvX" customClass="TRSettingsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5Wn-JH-nGM"/>
                         <viewControllerLayoutGuide type="bottom" id="dCk-HZ-5fS"/>
@@ -255,17 +255,34 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f3-r0-ZXI">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
                                         <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h">
-                                                <rect key="frame" x="10" y="20" width="355" height="178"/>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TRSettingsTableView" customModule="Tracker" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="20" width="375" height="558"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="items" id="eWP-oY-MpG">
-                                                        <rect key="frame" x="0.0" y="28" width="355" height="44"/>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="settings" id="eWP-oY-MpG" customClass="TRSettingsTableViewCell" customModule="Tracker" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eWP-oY-MpG" id="wLe-jD-6ai">
-                                                            <rect key="frame" x="0.0" y="0.0" width="322" height="43.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="342" height="49"/>
                                                             <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Weo-Rp-p4z">
+                                                                    <rect key="frame" x="18" y="13" width="326" height="33"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="top" secondItem="wLe-jD-6ai" secondAttribute="topMargin" constant="5" id="FUb-CH-83C"/>
+                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="trailing" secondItem="wLe-jD-6ai" secondAttribute="trailingMargin" constant="10" id="JgX-PD-3Wi"/>
+                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="bottom" secondItem="wLe-jD-6ai" secondAttribute="bottomMargin" constant="5" id="S6j-HS-c9j"/>
+                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="leading" secondItem="wLe-jD-6ai" secondAttribute="leadingMargin" constant="10" id="vqP-D7-g1V"/>
+                                                            </constraints>
                                                         </tableViewCellContentView>
+                                                        <connections>
+                                                            <outlet property="settingNameLabel" destination="Weo-Rp-p4z" id="l0E-j0-AG4"/>
+                                                        </connections>
                                                     </tableViewCell>
                                                 </prototypes>
                                             </tableView>
@@ -273,9 +290,9 @@
                                         <color key="backgroundColor" red="0.12811710858585856" green="0.12811710858585856" blue="0.12811710858585856" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="3f3-r0-ZXI" secondAttribute="top" constant="20" id="cSS-CJ-FCt"/>
-                                            <constraint firstItem="jLY-zk-90h" firstAttribute="leading" secondItem="3f3-r0-ZXI" secondAttribute="leading" constant="10" id="eWS-Ya-4wM"/>
-                                            <constraint firstAttribute="trailing" secondItem="jLY-zk-90h" secondAttribute="trailing" constant="10" id="la4-Va-GCS"/>
-                                            <constraint firstAttribute="bottom" secondItem="jLY-zk-90h" secondAttribute="bottom" constant="400" id="uYM-zZ-KYz"/>
+                                            <constraint firstAttribute="leading" secondItem="jLY-zk-90h" secondAttribute="leading" id="eWS-Ya-4wM"/>
+                                            <constraint firstAttribute="trailing" secondItem="jLY-zk-90h" secondAttribute="trailing" id="la4-Va-GCS"/>
+                                            <constraint firstItem="jLY-zk-90h" firstAttribute="bottom" secondItem="3f3-r0-ZXI" secondAttribute="bottom" constant="-20" id="uYM-zZ-KYz"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -299,6 +316,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="full__0000s_0091_config" id="AVs-Xu-NYO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="settingsTableView" destination="jLY-zk-90h" id="woT-LD-wxu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xTt-HB-Sun" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
