--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -237,7 +237,7 @@
             </objects>
             <point key="canvasLocation" x="-458.5" y="827.5"/>
         </scene>
-        <!--Settings-->
+        <!--Settings View Controller-->
         <scene sceneID="8TM-5Y-d0u">
             <objects>
                 <viewController id="jNl-ID-ZvX" customClass="TRSettingsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -246,17 +246,17 @@
                         <viewControllerLayoutGuide type="bottom" id="dCk-HZ-5fS"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="O9h-Pa-pET">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="anr-m3-a3w">
-                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f3-r0-ZXI">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TRSettingsTableView" customModule="Tracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="20" width="375" height="558"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="534"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="settings" id="eWP-oY-MpG" customClass="TRSettingsTableViewCell" customModule="Tracker" customModuleProvider="target">
@@ -286,9 +286,9 @@
                                                 </prototypes>
                                             </tableView>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.12811710858585856" green="0.12811710858585856" blue="0.12811710858585856" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="3f3-r0-ZXI" secondAttribute="top" constant="20" id="cSS-CJ-FCt"/>
+                                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="3f3-r0-ZXI" secondAttribute="top" id="cSS-CJ-FCt"/>
                                             <constraint firstAttribute="leading" secondItem="jLY-zk-90h" secondAttribute="leading" id="eWS-Ya-4wM"/>
                                             <constraint firstAttribute="trailing" secondItem="jLY-zk-90h" secondAttribute="trailing" id="la4-Va-GCS"/>
                                             <constraint firstItem="jLY-zk-90h" firstAttribute="bottom" secondItem="3f3-r0-ZXI" secondAttribute="bottom" constant="-20" id="uYM-zZ-KYz"/>
@@ -307,21 +307,42 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="anr-m3-a3w" secondAttribute="trailing" id="1XS-yQ-Lv5"/>
+                            <constraint firstItem="anr-m3-a3w" firstAttribute="trailing" secondItem="O9h-Pa-pET" secondAttribute="trailing" id="1XS-yQ-Lv5"/>
                             <constraint firstItem="anr-m3-a3w" firstAttribute="leading" secondItem="O9h-Pa-pET" secondAttribute="leading" id="LS8-qK-bhB"/>
                             <constraint firstItem="anr-m3-a3w" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="rrp-Eu-5Dj"/>
-                            <constraint firstItem="dCk-HZ-5fS" firstAttribute="top" secondItem="anr-m3-a3w" secondAttribute="bottom" id="z9f-XS-M5l"/>
+                            <constraint firstItem="anr-m3-a3w" firstAttribute="bottom" secondItem="dCk-HZ-5fS" secondAttribute="top" id="z9f-XS-M5l"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Settings" image="full__0000s_0091_config" id="AVs-Xu-NYO"/>
+                    <navigationItem key="navigationItem" id="GVL-wW-NVA"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="settingsTableView" destination="jLY-zk-90h" id="woT-LD-wxu"/>
+                        <segue destination="0fU-ki-PNF" kind="show" identifier="showManageItems" id="2za-By-DGz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xTt-HB-Sun" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="211.5" y="-244.5"/>
+            <point key="canvasLocation" x="666.5" y="-244.5"/>
+        </scene>
+        <!--Manage Items View Controller-->
+        <scene sceneID="c2j-7S-2W3">
+            <objects>
+                <viewController id="0fU-ki-PNF" customClass="TRManageItemsViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="K59-xG-gh1"/>
+                        <viewControllerLayoutGuide type="bottom" id="roZ-4S-zlg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tpo-LP-uiC">
+                        <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="pVv-aV-PxA"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wy8-sB-7s4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1131.5" y="-244.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -337,12 +358,36 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="3nR-N7-Sox"/>
                         <segue destination="8rJ-Kc-sve" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
-                        <segue destination="jNl-ID-ZvX" kind="relationship" relationship="viewControllers" id="ykd-Yb-B2O"/>
+                        <segue destination="N4d-Ef-h1z" kind="relationship" relationship="viewControllers" id="ykd-Yb-B2O"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-458.5" y="15.5"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="Ide-tU-G69">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N4d-Ef-h1z" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="full__0000s_0091_config" id="AVs-Xu-NYO"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" translucent="NO" id="nMY-Qr-XMO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="I9V-Uy-utg">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="jNl-ID-ZvX" kind="relationship" relationship="rootViewController" id="8Tf-fK-F9k"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9hV-sA-eCi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="211.5" y="-244.5"/>
         </scene>
     </scenes>
     <resources>
