--- a/Tracker/Base.lproj/Main.storyboard
+++ b/Tracker/Base.lproj/Main.storyboard
@@ -249,69 +249,44 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="anr-m3-a3w">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TRSettingsTableView" customModule="Tracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3f3-r0-ZXI">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
-                                        <subviews>
-                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jLY-zk-90h" customClass="TRSettingsTableView" customModule="Tracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
-                                                <prototypes>
-                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="settings" id="eWP-oY-MpG" customClass="TRSettingsTableViewCell" customModule="Tracker" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
-                                                        <autoresizingMask key="autoresizingMask"/>
-                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eWP-oY-MpG" id="wLe-jD-6ai">
-                                                            <rect key="frame" x="0.0" y="0.0" width="342" height="50"/>
-                                                            <autoresizingMask key="autoresizingMask"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Weo-Rp-p4z">
-                                                                    <rect key="frame" x="18" y="14" width="326" height="21"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="centerY" secondItem="wLe-jD-6ai" secondAttribute="centerY" id="Hwr-SP-MIP"/>
-                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="trailing" secondItem="wLe-jD-6ai" secondAttribute="trailingMargin" constant="10" id="JgX-PD-3Wi"/>
-                                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="leading" secondItem="wLe-jD-6ai" secondAttribute="leadingMargin" constant="10" id="vqP-D7-g1V"/>
-                                                            </constraints>
-                                                        </tableViewCellContentView>
-                                                        <connections>
-                                                            <outlet property="settingNameLabel" destination="Weo-Rp-p4z" id="l0E-j0-AG4"/>
-                                                        </connections>
-                                                    </tableViewCell>
-                                                </prototypes>
-                                            </tableView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="3f3-r0-ZXI" secondAttribute="top" id="cSS-CJ-FCt"/>
-                                            <constraint firstAttribute="leading" secondItem="jLY-zk-90h" secondAttribute="leading" id="eWS-Ya-4wM"/>
-                                            <constraint firstAttribute="trailing" secondItem="jLY-zk-90h" secondAttribute="trailing" id="la4-Va-GCS"/>
-                                            <constraint firstItem="jLY-zk-90h" firstAttribute="bottom" secondItem="3f3-r0-ZXI" secondAttribute="bottom" id="uYM-zZ-KYz"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="height" secondItem="anr-m3-a3w" secondAttribute="height" id="3cf-nj-XK0"/>
-                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="width" secondItem="anr-m3-a3w" secondAttribute="width" id="7Sq-xa-Wwa"/>
-                                    <constraint firstAttribute="trailing" secondItem="3f3-r0-ZXI" secondAttribute="trailing" id="Jx5-pG-OxN"/>
-                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="top" secondItem="anr-m3-a3w" secondAttribute="top" id="bT8-qm-r6U"/>
-                                    <constraint firstAttribute="bottom" secondItem="3f3-r0-ZXI" secondAttribute="bottom" id="fQd-5k-9NY"/>
-                                    <constraint firstItem="3f3-r0-ZXI" firstAttribute="leading" secondItem="anr-m3-a3w" secondAttribute="leading" id="qs7-Ns-DX8"/>
-                                </constraints>
-                            </scrollView>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="settings" id="eWP-oY-MpG" customClass="TRSettingsTableViewCell" customModule="Tracker" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eWP-oY-MpG" id="wLe-jD-6ai">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Weo-Rp-p4z">
+                                                    <rect key="frame" x="18" y="14" width="326" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="centerY" secondItem="wLe-jD-6ai" secondAttribute="centerY" id="Hwr-SP-MIP"/>
+                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="trailing" secondItem="wLe-jD-6ai" secondAttribute="trailingMargin" constant="10" id="JgX-PD-3Wi"/>
+                                                <constraint firstItem="Weo-Rp-p4z" firstAttribute="leading" secondItem="wLe-jD-6ai" secondAttribute="leadingMargin" constant="10" id="vqP-D7-g1V"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="settingNameLabel" destination="Weo-Rp-p4z" id="l0E-j0-AG4"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="anr-m3-a3w" firstAttribute="trailing" secondItem="O9h-Pa-pET" secondAttribute="trailing" id="1XS-yQ-Lv5"/>
-                            <constraint firstItem="anr-m3-a3w" firstAttribute="leading" secondItem="O9h-Pa-pET" secondAttribute="leading" id="LS8-qK-bhB"/>
-                            <constraint firstItem="anr-m3-a3w" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="rrp-Eu-5Dj"/>
-                            <constraint firstItem="anr-m3-a3w" firstAttribute="bottom" secondItem="dCk-HZ-5fS" secondAttribute="top" id="z9f-XS-M5l"/>
+                            <constraint firstItem="jLY-zk-90h" firstAttribute="top" secondItem="5Wn-JH-nGM" secondAttribute="bottom" id="583-IB-y71"/>
+                            <constraint firstItem="jLY-zk-90h" firstAttribute="bottom" secondItem="dCk-HZ-5fS" secondAttribute="top" id="HVg-kd-MeG"/>
+                            <constraint firstItem="jLY-zk-90h" firstAttribute="left" secondItem="O9h-Pa-pET" secondAttribute="left" id="det-mj-MBG"/>
+                            <constraint firstItem="jLY-zk-90h" firstAttribute="right" secondItem="O9h-Pa-pET" secondAttribute="right" id="v6y-CT-B3c"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="GVL-wW-NVA"/>
